# platform.core.graphics.cairo

./: Makefile.am  Makefile.win32  autogen.sh  cairo-glesv3-uninstall.pc  configure.ac  project.config
boilerplate/: Makefile.am  Makefile.sources  Makefile.win32.features  cairo-boilerplate-cgl.c  cairo-boilerplate-egl.c  cairo-boilerplate-evas-gl.c  cairo-boilerplate-tg.c
doc/: cairo-evas-gl_doc.h
native/: CMakeLists.txt
native/contrib/glm/detail/: dummy.cpp
native/distortion/: distorted_grid_loader.cpp  distorted_grid_loader.h  distorter.cpp  distorter.h  distorter_shaders.inc  distortion_grid.cpp  distortion_grid.h
native/eglextension/frontbuffer/: front_buffer.h
native/engine/importer/: assimp_importer.h  importer.cpp  importer.h  jassimp.cpp  jassimp.h
native/engine/picker/: picker.cpp
native/engine/renderer/: renderer.cpp  renderer.h
native/gl/: gl_program.h  gl_texture.h
native/objects/: mesh.h  scene.cpp  scene_object.cpp
native/objects/components/: camera_rig.cpp  camera_rig.h  perspective_camera.cpp  perspective_camera.h  texture_capturer.cpp  texture_capturer.h  transform.cpp  transform.h
native/objects/textures/: base_texture.h  cubemap_texture.h
native/sensor/ksensor/: k_sensor.cpp  k_sensor.h  ktracker_data_info.h
native/shaders/material/: external_renderer_shader.cpp
native/shaders/posteffect/: custom_post_effect_shader.cpp
native/util/: gvr_gl.h  gvr_java_stack_trace.h  gvr_log.h  jni_utils.h
packaging/: cairo-3.spec  cairo.spec
src/: Makefile.sources  Makefile.win32.features  cairo-analysis-surface.c  cairo-array.c  (+128 more)
(+8 files in other folders)
