CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

MESSAGE("CMAKE_SOURCE_DIR : ${CMAKE_SOURCE_DIR}")
MESSAGE("CMAKE_CURRENT_SOURCE_DIR : ${CMAKE_CURRENT_SOURCE_DIR}")

SET(LIBDIR ${CMAKE_SOURCE_DIR}/install/lib)

file(GLOB_RECURSE LIB_SRCS
    "*.h"
    "*.hpp"
    "*.cpp"
)

SET(PROJECT_LIB_NAME "GVRf-Tizen")

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/contrib/assimp/include
					${CMAKE_SOURCE_DIR}
					${CMAKE_SOURCE_DIR}/contrib)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC -std=gnu++11 -O3")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -std=gnu++11 -O3")

#Generating Static Client Library
ADD_LIBRARY(${PROJECT_LIB_NAME} STATIC ${LIB_SRCS})
#ADD_LIBRARY(${PROJECT_LIB_NAME} SHARED ${LIB_SRCS})

FOREACH(flag ${TIZEN_PKG_LDFLAGS})
	SET(pkgs_LDFLAGS "${pkgs_LDFLAGS} ${flag}")
ENDFOREACH(flag)

SET(pkgs_LDFLAGS "${pkgs_LDFLAGS}-lpthread")
SET(CMAKE_STACK_LINKER_FLAGS "-L${STACK_LIB_DIR} -lpthread -lm -lrt -ldl -lstdc++")

TARGET_LINK_LIBRARIES(${PROJECT_LIB_NAME} ${pkgs_LDFLAGS} ${CMAKE_STACK_LINKER_FLAGS})
INSTALL(TARGETS ${PROJECT_LIB_NAME} DESTINATION ${LIBDIR} )

